[package]
name = "webpack-rust-wasm-ts-less-template"
version = "0.1.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2018"
description = "Web application template with Webpack, Rust-generated WASM, TypeScript and LESS"
readme = "README.md"
repository = "https://github.com/zheland/webpack-rust-wasm-ts-less-template/"
license = "MIT OR Apache-2.0"
categories = ["wasm"]
keywords = ["wasm"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.58"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
